# injectum

./: Cargo.toml  README.md
.cargo/: config.toml
.zed/: settings.json
examples/T1055_001/: classic_dll.rs  dll_injection.rs  memory_module.rs  module_stomping.rs  reflective_dll.rs
examples/T1055_002/: manual_mapping.rs  remote_thread.rs
examples/T1055_003/: thread_hijacking.rs
examples/T1055_004/: early_bird.rs  sniper_apc.rs  spray_apc.rs
examples/T1055_012/: entry_point_stomping.rs  process_hollowing.rs
injectum/: Cargo.toml  README.md
injectum/src/: error.rs  factory.rs  lib.rs  payload.rs
injectum/src/strategy/: T1055_001.rs  T1055_002.rs  T1055_003.rs  T1055_004.rs  T1055_005.rs  T1055_008.rs  T1055_011.rs  T1055_012.rs  T1055_014.rs  T1055_015.rs  mod.rs
injectum_async_procedure_calls/: Cargo.toml  README.md
injectum_async_procedure_calls/examples/: alertable_thread.rs
injectum_async_procedure_calls/src/: main.rs
injectum_classic/: Cargo.toml  README.md
injectum_classic/src/: main.rs
injectum_classic_remote/: Cargo.toml  README.md
injectum_classic_remote/src/: main.rs
injectum_early_bird/: Cargo.toml  README.md
injectum_early_bird/src/: main.rs
injectum_hollowing/: Cargo.toml  README.md
injectum_hollowing/src/: main.rs
injectum_thread_hijacking/: Cargo.toml  README.md
injectum_thread_hijacking/src/: main.rs
src/: builder.rs  error.rs  factory.rs  injector.rs  lib.rs  payload.rs  target.rs
src/strategy/: T1055_001.rs  T1055_002.rs  T1055_003.rs  T1055_004.rs  T1055_005.rs  T1055_008.rs  T1055_009.rs  T1055_011.rs  T1055_012.rs  T1055_013.rs  T1055_014.rs  T1055_015.rs  mod.rs
