[package]
name = "injectum"
version = "0.2.4"
authors = ["Skynõx <0x536b796ec3b578@proton.me>"]
edition = "2024"
repository = "https://github.com/0x536b796ec3b578/injectum"
license = "MIT"
description = "The modern, type-safe process injection framework for Red Teams and Offensive Security in Rust."
readme = "README.md"
keywords = [
    "security",
    "malware",
    "redteam",
    "mitre",
    "windows"
]
categories = [
    "security",
    "os::windows-apis",
    "simulation",
    "algorithms",
    "api-bindings"
]

[features]
default = ["tracing", "T1055_003"]
tracing = ["dep:tracing"]
full = ["T1055_001", "T1055_002", "T1055_003", "T1055_004", "T1055_005", "T1055_008", "T1055_009", "T1055_011", "T1055_012", "T1055_013", "T1055_014", "T1055_015"]

# T1055.001: Dynamic-link Library Injection
T1055_001 = [
    "dep:windows-sys",
    "windows-sys/Win32_Security",
    "windows-sys/Win32_System_Diagnostics_Debug",
    "windows-sys/Win32_System_Diagnostics_ToolHelp",
    "windows-sys/Win32_System_LibraryLoader",
    "windows-sys/Win32_System_Memory",
    "windows-sys/Win32_System_SystemServices",
    "windows-sys/Win32_System_SystemInformation",
    "windows-sys/Win32_System_Threading"
]

# T1055.002: Portable Executable Injection
T1055_002 = [
    "dep:windows-sys",
    "windows-sys/Win32_Security",
    "windows-sys/Win32_System_Diagnostics_Debug",
    "windows-sys/Win32_System_LibraryLoader",
    "windows-sys/Win32_System_Memory",
    "windows-sys/Win32_System_SystemServices",
    "windows-sys/Win32_System_SystemInformation",
    "windows-sys/Win32_System_Threading"
]
# T1055.004: Thread Execution Hijacking
T1055_003 = [
    "dep:windows-sys",
    "windows-sys/Win32_System_Diagnostics_Debug",
    "windows-sys/Win32_System_Diagnostics_ToolHelp",
    "windows-sys/Win32_System_Kernel",
    "windows-sys/Win32_System_Memory",
    "windows-sys/Win32_System_Threading"
]
# T1055.004: Asynchronous Procedure Call
T1055_004 = [
    "dep:windows-sys",
    "windows-sys/Win32_System_Diagnostics_Debug",
    "windows-sys/Win32_System_Diagnostics_ToolHelp",
    "windows-sys/Win32_System_Memory",
    "windows-sys/Win32_System_Threading"
]
T1055_005 = []
T1055_008 = []
T1055_009 = []
T1055_011 = []
# T1055.012: Process Hollowing
T1055_012 = [
    "dep:windows-sys",
    "windows-sys/Wdk_System_Memory",
    "windows-sys/Wdk_System_Threading",
    "windows-sys/Win32_Security",
    "windows-sys/Win32_System_Diagnostics_Debug",
    "windows-sys/Win32_System_Kernel",
    "windows-sys/Win32_System_LibraryLoader",
    "windows-sys/Win32_System_Memory",
    "windows-sys/Win32_System_SystemServices",
    "windows-sys/Win32_System_SystemInformation",
    "windows-sys/Win32_System_Threading"
]
T1055_013 = []
T1055_014 = []
T1055_015 = []

[dependencies]
thiserror = "2.0.17"
tracing = { version = "0.1.41", optional = true }
windows-sys = { version = "0.61.2", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[example]]
name = "T1055_001_Classic_DLL"
path = "examples/T1055_001/classic_dll.rs"
required-features = ["T1055_001"]

[[example]]
name = "T1055_001_Reflective_DLL"
path = "examples/T1055_001/reflective_dll.rs"
required-features = ["T1055_001"]

[[example]]
name = "T1055_001_MemoryModule"
path = "examples/T1055_001/memory_module.rs"
required-features = ["T1055_001"]

[[example]]
name = "T1055_001_ModuleStomping"
path = "examples/T1055_001/module_stomping.rs"
required-features = ["T1055_001"]

[[example]]
name = "T1055_002_Manual_Mapping"
path = "examples/T1055_002/manual_mapping.rs"
required-features = ["T1055_002"]

[[example]]
name = "T1055_003_Thread_Hijacking"
path = "examples/T1055_003/thread_hijacking.rs"
required-features = ["T1055_003"]

[[example]]
name = "T1055_004_Sniper_APC"
path = "examples/T1055_004/sniper_apc.rs"
required-features = ["T1055_004"]

[[example]]
name = "T1055_004_Spray_APC"
path = "examples/T1055_004/spray_apc.rs"
required-features = ["T1055_004"]

[[example]]
name = "T1055_004_Early_Bird"
path = "examples/T1055_004/early_bird.rs"
required-features = ["T1055_004"]

[[example]]
name = "T1055_012_Process_Hollowing"
path = "examples/T1055_012/process_hollowing.rs"
required-features = ["T1055_012"]

[[example]]
name = "T1055_012_Entry_Point_Stomping"
path = "examples/T1055_012/entry_point_stomping.rs"
required-features = ["T1055_012"]
